css/style.css
/* ... */
.transport-list li {
  position: relative;
  padding-left: 35px;
}

.transport-list li::before {
  content: "\00b0";
  position: absolute;
  left: 0;
  top: 4px;
  font-size: 1.4em;
  color: #e6e6e6;
}

.site-footer {
  background-color: #464646;
}

.footer-top {
  display: flex;
  justify-content: flex-end;
  width: 1160px;
  padding-top: 65px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 45px;
}

.site-footer .logo {
  margin: 0;
  margin-right: auto;
  color: #ffc600;
}

.site-footer .logo:hover {
  color: rgba(255, 198, 0, 0.6);
}

.site-footer .logo:active {
  color: rgba(255, 198, 0, 0.3);
}

.footer-top .links-wrapper {
  width: 330px;
}

.footer-link {
  color: rgba(255, 255, 255, 0.7);
}

.footer-link:hover {
  color: #ffffff;
  opacity: 1;
}

.footer-link:active {
  color: rgba(255, 255, 255, 0.3);
  opacity: 1;
}

.footer-link svg {
  fill: #ffc600;
}

.footer-link:hover svg {
  fill: rgba(255, 198, 0, 0.6);;
}

.footer-link:active svg {
  fill: rgba(255, 198, 0, 0.3);;
}

.footer-mid {
  display: flex;
  width: 1160px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 75px;
}

.footer-mid p {
  margin: 0;
  font-family: "Open Sans", Arial, sans-serif;
  font-size: 15px;
  font-weight: 300;
  color: #ffffff;
}

.footer-mid p:first-of-type {
  margin-right: auto;
}

.footer-mid p:last-of-type {
  margin-left: auto;
}

.footer-menu {
  width: 425px;
  justify-self: center;
  display: flex;
  justify-content: space-between;
}

.site-footer .menu-link {
  color: #ffffff;
}

.site-footer .menu-link:last-of-type {
  margin-right: 0;
}

.site-footer .menu-link:hover {
  color: rgba(255, 255, 255, 0.6);
}

.site-footer .menu-link:active {
  color: rgba(255, 255, 255, 0.3);
}

.footer-bottom {
  position: relative;
  display: flex;
  width: 1160px;
  height: 43px;
  padding-bottom: 65px;
  margin-left: auto;
  margin-right: auto;
}

.footer-bottom::before {
  content: "";
  position: absolute;
  top: 10px;
  left: 0;
  width: 80px;
  height: 8px;
  background-color: #ffc600;
}

.social {
  margin: auto;
  padding-left: 60px;
  display: flex;
  width: 143px;
  height: 43px;
  justify-content: space-between;
}

.social-icon {
  width: 32px;
  height: 32px;
}

.social-icon svg {
  fill: #7e7e7e;
}

.social-icon:hover svg {
  fill: #b5b5b5;
}

.social-icon:active svg {
  fill: #595959;
}

.copyright {
  justify-self: flex-end;
}

.copyright svg {
  fill: #FFC600;
}

.copyright:hover svg {
  fill: #b5931c;
}

.copyright:active svg {
  fill: #7e6d31;
}

.pop-up {
  display: none;
}

.name-input::placeholder,
.email-input::placeholder,
.message-input::placeholder {
  font-family: "Open Sans", Arial, sans-serif;
  font-size: 14px;
  font-weight: 400;
  color: rgba(70, 70, 70, 0.4);
}

/*---Styles for Catalog page---*/

.user-name {
  position: relative;
  margin: 0;
  margin-right: 20px;
  padding-left: 25px;
}

.user-name svg {
  position: absolute;
  left: 0;
  top: 9px;
}

.logout {
  margin-right: auto;
  color: rgba(0, 0, 0, 0.3);
}

.inner-content * {
  outline: 1px solid darkblue;
}

.page-title {
  width: 1100px;
  margin: 40px auto 30px;
  padding-left: 60px;
  font-family: "Gilroy", Tahoma, sans-serif;
  font-size: 47px;
  font-weight: 700;
  line-height: 1em;
}

.bread-crumbs {
  display: flex;
  width: 1100px;
  padding-left: 60px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 50px;
}

.crumb {
  padding-right: 20px;
  margin-right: 20px;
  font-family: "Open Sans", Arial, sans-serif;
  font-size: 14px;
  font-weight: 300;
  text-decoration: none;
  color: rgba(0, 0, 0, 0.3);
  background-image: url("../img/svg/nav-arrow.svg");
  background-repeat: no-repeat;
  background-position-x: right;
  background-position-y: 13px;
}

.crumb:last-child {
  background-image: none;
}

.grid-wrapper {
  display: flex;
}

.filter {
  width: calc(50% - 250px);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-left: auto;
  background-color: #efefef;
}

.filter fieldset {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0;
  border: none;
}

.section-title {
  font-family: "Gilroy", Tahoma, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 1.5em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
}

.filter-title {
  width: 100%;
  padding-top: 24px;
  padding-bottom: 24px;
  margin: 0;
  margin-bottom: 70px;
  background-color: #dcdcdc;
  text-align: right;
}

.filter-title span {
  padding-right: 180px;
}

.filter-form {
  width: 202px;
  margin-left: auto;
  margin-right: 70px;
}

.filter-form label {
  font-size: 14px;
  line-height: 2.857em;
}

.filter-form input {
  display: none;
}

.param-title {
  padding-top: 12px;
  width: 201px;
  font-family: "Gilroy", Tahoma, sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.333em;
  border-top: 2px solid #000000;
}

.param-cost {
  margin-bottom: 40px;
}

.cost-range {
  width: 200px;
  height: 2px;
  margin-bottom: 70px;
  background-color: #dbdbdb;
}

.current-range {
  position: relative;
  width: 120px;
  height: 2px;
  background-color: #91c92f;
}

.min-range-val,
.max-range-val {
  position: absolute;
  top: -8px;
  display: inline-block;
  width: 20px;
  height: 20px;
  background-image: url("../img/svg/filter-button.svg");
  background-repeat: no-repeat;
  background-position: center;
  z-index: 1;
  cursor: pointer;
}

.min-range-val:active,
.max-range-val:active {
  top: -10px;
  width: 25px;
  height: 25px;
  background-size: cover;
}

.min-range-val {
  left: -5px;
}

.max-range-val {
  right: 0;
}

.label-range {
  position: absolute;
  font-family: "Gilroy", Tahoma, sans-serif;
  font-size: 14px;
  line-height: 1.714em;
  letter-spacing: 0;
  color: rgba(0, 0, 0, 0.2);
}

.label-min {
  left: 0px;
}

.label-max {
  right: -15px;
}

.field-color {
  margin-bottom: 35px;
}

.param-color,
.param-bt {
  margin-bottom: 20px;
}
/* ... */

